gccida/c0/print_value
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_value/src/sched-vis.c:1056:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( unsigned __int8 *)reg_names[xa->fld[0].rtuint]] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_value/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_value/src/sched-vis.c:1067:13: error: use of undeclared identifier 'off_8A279B'
sprintf( t, off_8A279B, *( _DWORD *)&xa[1]); 
            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_value/src/obj/sched-vis.o] Error 1
